package interfaces;

public interface Game {
    void startGame();
    void switchPlayer();
    void processMove();

}
