package interfaces;

public interface UserInterface {
    void displayBoard();
    void displayMessage();
    void getPlayerMove();
}
